Complete without edit item

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-add hamburger menu for darkmode, myLists, logout
+fix bug when user refreshes browser while in MyLists or NewList, the theme reverts to default (minimal) because useEffect runs on Dashboard and not in App. If I move it to App, the app is broken the first time someone opens app because user data is attempted to be fetched before a user exists...
 
-add myLists page
+add ability to edit list names and item descriptions
 
-update UI with chakra
+
